Added extra dependencies section